[files] Fixed file listitem text spacing on mobile

--- a/frontend/files/styles/main.scss
+++ b/frontend/files/styles/main.scss
@@ -793,6 +793,7 @@ a {
 		> .filesListItemTextComponent {
 			width: auto;
 			font-size: 12px;
+			padding-top: 3px;
 		}
 	}
 
